# yakusha

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.cfg
.github/workflows/: build-and-test.yml  deploy-debian-nightly.yml  deploy-debian-stable.yml
kumo_json/: __init__.py  data_types.py  json_to_msg.py  msg_to_json.py  package.xml  setup.py
kumo_json/kumo_json/: __init__.py  data_types.py  json_to_msg.py  msg_to_json.py
kumo_json/test/test_serialization/: test_arrays_msg.py  test_bool_msg.py  test_bounded_dynamic_arrays_msg.py  test_byte_msg.py  test_bytes_msg.py  test_char_msg.py  test_color_rgba_msg.py  test_floats_msg.py  test_integers_msg.py  test_string_msg.py  test_unsigned_integers_msg.py
kumo_json/test/test_serialization/test_arrays/: test_arrays_msg.py
kumo_json/test/test_serialization/test_complex/: test_non_floats_msg.py  (+1 more)
kumo_json_interfaces/: CMakeLists.txt  package.xml
kumo_json_interfaces/msg/: Arrays.msg  BoundedDynamicArrays.msg
kumo_json_interfaces/msg/arrays/: Arrays.msg
kumo_json_interfaces/msg/complex/: NonFloats.msg
kumo_json_interfaces/msg/primitives/: Integers.msg
msg/primitives/: NonNumbers.msg
test/test_serialization/: test_bool_msg.py  test_color_rgba_msg.py  test_float32_msg.py  test_int32_msg.py  test_string_msg.py  test_uint32_msg.py
test/test_serialization/test_arrays/: test_arrays_msg.py
test/test_serialization/test_complex/: test_numbers_msg.py
test/test_serialization/test_primitives/: test_bool_msg.py  test_char_msg.py  test_integers_msg.py  test_string_msg.py  test_unsigned_integers_msg.py
yakusha/: CMakeLists.txt  __init__.py  msg_to_json.py  package.xml  setup.cfg  setup.py
yakusha/test/test_serialization/test_arrays/: test_arrays_msg.py  test_bounded_dynamic_arrays_msg.py
yakusha/test/test_serialization/test_complex/: test_non_floats_msg.py  test_numbers_msg.py
yakusha/test/test_serialization/test_primitives/: test_byte_msg.py  test_floats_msg.py  test_integers_msg.py  test_unsigned_integers_msg.py
yakusha/yakusha/: json_to_msg.py
yakusha_interfaces/: CMakeLists.txt  package.xml
yakusha_interfaces/msg/complex/: Numbers.msg
yakusha_interfaces/msg/primitives/: UnsignedIntegers.msg
(+1 files in other folders)
