<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>yakusha</name>
  <version>0.1.0</version>
  <description>ROS 2 interface to JSON serialization project</description>
  <maintainer email="alfi.maulana.f@gmail.com">Alfi Maulana</maintainer>
  <license>MIT License</license>
  <url>https://github.com/ichiro-its/yakusha</url>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_pytest</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>rosidl_parser</depend>
  <depend>rosidl_runtime_py</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>std_msgs</test_depend>
  <test_depend>yakusha_interfaces</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
